# pure-ollama

./: Cargo.toml
src/: errors.rs  format.rs  lib.rs  options.rs  response.rs
src/api/: completion.rs  mod.rs  options.rs
src/api/tests/: mod.rs  test_completion.rs
src/chat_completion/: chat_completion.rs  message.rs  mod.rs  request.rs  response.rs  test_chat_completion.rs
src/completion/: completion.rs  generate.rs  mod.rs  request.rs  response.rs  test_completion.rs  test_generate.rs
src/model/: create.rs  mod.rs  test_create.rs
