[package]
name = "pure-ollama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.80"
axum = "0.7.5"
base64 = "0.22.1"
bytes = { version = "1.6.0", features = ["serde"] }
derive_builder = "0.20.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio = "1.38.0"
tokio-stream = "0.1.15"
